Update Bank; Added tests and fixed artifact creation.